fix: do not center align content (#25)

--- a/frontend/src/pages/errors/Forbidden.css
+++ b/frontend/src/pages/errors/Forbidden.css
@@ -1,4 +1,4 @@
-.content {
+.forbidden.content {
   display: grid;
   justify-items: center;
 }
