--- a/frontend/src/pages/errors/NotFound.css
+++ b/frontend/src/pages/errors/NotFound.css
@@ -1,4 +1,4 @@
-.content {
+.not-found.content {
   display: grid;
   justify-items: center;
 }
